# qnn-mobile-app

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/qnnsampleapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: App.cpp  App.hpp  AppUtils.cpp  AppUtils.hpp  CMakeLists.txt  main.cpp
app/src/main/cpp/Utils/: DataUtil.cpp  DataUtil.hpp  DynamicLoadUtil.cpp  DynamicLoadUtil.hpp  IOTensor.cpp  IOTensor.hpp
app/src/main/cpp/Wrapper/: QnnWrapperFunc.hpp  QnnWrapperUtils.cpp  QnnWrapperUtils.hpp
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/qnnsampleapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
